Openspeedtest/openspeedtest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: openspeedtest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  selector:
    matchLabels:
      app: openspeedtest
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: openspeedtest
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - name: openspeedtest
        image: openspeedtest/latest:latest 
        ports: 
          - containerPort: 3000
        volumeMounts:
        - mountPath: /config
          name: openspeedtest-data
      volumes:
      - name: openspeedtest-data
        persistentVolumeClaim:
          claimName:  openspeedtest-claim
