Openspeedtest/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: openspeedtest
  namespace: openspeedtest
spec:
  selector:
    app: openspeedtest
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
