Openspeedtest/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openspeedtest-server
  namespace: openspeedtest-server
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`speedtest.kbtech.org`)
      kind: Rule
      services:
        - name: openspeedtest-server
          port: 3000
  tls:
    secretName: kbtech-tls # change to your cert name
